--- a/index.html
+++ b/index.html
@@ -4,26 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            max-width: 600px;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            max-width: 800px;
             margin: auto;
             padding: 20px;
         }
-        .question {
+        h2 {
+            color: #2c3e50;
+            text-align: center;
             margin-bottom: 20px;
         }
-        .answer {
-            display: block;
-            margin-bottom: 10px;
+        #quiz-container, #result, #start-container {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
-        .result {
-            display: none;
-            margin-top: 20px;
+        #start-container {
+            text-align: center;
         }
-        .question-count {
-            margin-bottom: 10px;
+        select, button {
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        button {
+            background-color: #3498db;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #2980b9;
+        }
+        .question {
+            font-size: 18px;
+            margin-bottom: 20px;
         }
         .answer-container {
             margin-bottom: 15px;
@@ -31,8 +55,21 @@
         .incorrect {
             color: red;
         }
-        #topic-selection {
-            margin-bottom: 20px;
+        .question-count {
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        label {
+            margin-left: 10px;
+            font-size: 16px;
+        }
+        #score {
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+        }
+        #detailed-result {
+            margin-top: 20px;
         }
     </style>
 </head>
