--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
     </div>
 
     <footer>
-        Aleksandr Nemirovskiy ©
+        <a href="https://t.me/alexnemir">Aleksandr Nemirovskiy</a> ©
+        © <a href="https://reidman.co.il/">מכללת רידמן</a> - שאלות 
     </footer>
 
     <script>
