--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <footer>
-        <a href="https://t.me/alexnemir">Aleksandr Nemirovskiy</a> ©
+        <a href="https://t.me/alexnemir">Aleksandr Nemirovskiy</a> © <br>
         © <a href="https://reidman.co.il/">מכללת רידמן</a> - שאלות 
     </footer>
 
