--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <div id="start-container">
-        <h2>Select Quiz Topic and Mode</h2>
+        <h2>מתוקשב מבוא לרפואה קלינית</h2>
 
         <!-- Выбор темы -->
         <div id="topic-selection">
